fix(navbar): Fix responsive layout bugs in navbar
* delete obsolete values because of flex directions
* fit logo into an adaptive size
* fit searchbar into an adaptive streching

--- a/resources/css/_default-variables.less
+++ b/resources/css/_default-variables.less
@@ -95,7 +95,7 @@
 @screen-sm:                       768px;
 @screen-sm-min:                   @screen-sm;
 @screen-medium:                   841px;
-@screen-md:                       992px;
+@screen-md:                       991px;
 @screen-md-min:                   992px;
 @screen-lg:                       1200px;
 @screen-lg-min:                   @screen-lg;
