--- a/resources/css/_navigation.less
+++ b/resources/css/_navigation.less
@@ -14,10 +14,6 @@
     height: 40px;
   }
 
-  @media (min-width: @screen-lg-min) {
-    height: 56px;
-  }
-
   span {
     margin-left: 60px;
     display: @application-title-display;
@@ -129,9 +125,12 @@
 
 // Wrapper only for calling data-template="browse:fix-links"
 .tp-logo-wrapper {
-  display: flex;
-  width: 100%;
   height: @navbar-height-small;
+  @media screen and (max-width: @screen-md) {
+    display: flex;
+    width: 100%;
+  }
+
   @media screen and (min-width: @screen-lg-min) {
     height: @navbar-height-large;
   }
@@ -170,16 +169,12 @@
   @media (max-width: 991px) {
     background-color: @dropdown-link-hover-bg;
   }
-  .glyphicon.visible-sm {
-    font-size: 20px;
-  }
 }
 
 #searchPageForm {
   font-size: @font-size-small !important;
 
   @media screen and (min-width: @screen-xs-min) {
-    //margin: 11px 0;
     font-size: @font-size-body-default !important;
   }
   @media screen and (min-width: @screen-lg-min) {
@@ -191,11 +186,7 @@
   }
 
   input.search-input {
-    width: 16vw;
     padding-bottom: 1px !important;
-    @media (min-width: 1200px) {
-      width: 20vw;
-    }
   }
 
   i {
@@ -307,10 +298,11 @@
 }
 
 // Override Bootstrap Material navigation styles
-@media (min-width: 992px) {
-  .navbar-expand-lg .navbar-nav .nav-link {
-    padding-right: .94rem;
-    padding-left: .94rem;
+.navbar-expand-lg .navbar-nav .nav-link {
+  white-space: nowrap;
+    @media (min-width: 992px) {
+      padding-right: .94rem;
+      padding-left: .94rem;
   }
 }
 
@@ -337,7 +329,7 @@
   @media (min-width: @screen-lg-min) {
     padding-top: 1.25rem;
     padding-bottom: 1.25rem;
-    max-height: @navbar-height-large;
+    height: @navbar-height-large;
   }
 }
 
